# superset-py-client

./: README.md  main.py  pyproject.toml
supersetpyclient/: client.py  models.py
